--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -51,3 +51,77 @@ body {
 #content h1 {
   font-size: 18pt;
 }
+
+html fieldset {
+  position: relative;
+  margin-top: 1em;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+html legend {
+  position: absolute;
+  top: -1em;
+  left: .5em;
+}
+
+fieldset {
+  background: #ddd;
+}
+legend {
+  color: white;
+  background: maroon;
+  padding: .4em 1em;
+}
+label {
+  width: 10em;
+  float: left;
+  text-align: right;
+  margin-right: 0.2em;
+  display: block;
+}
+.form_row {
+  white-space: nowrap;
+  padding-bottom: .5em;
+}
+.submit {
+  margin-left: 15em;
+}
+
+.debug_dump {
+  text-align: left;
+  border-top: 1px dashed black;
+  background: #ccc;
+  margin: 0;
+  padding: 0.5em;
+}
+
+#error_explanation {
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    color: #fff; }
+  ul li {
+    font-size: 12px;
+    list-style: square; } }
+#notice {
+  color: green; }
+
+div {
+  &.form_row, &.actions {
+    margin-bottom: 10px; } }
+
+.field_with_errors {
+  padding: 2px;
+  background-color: red;
+  display: table; }
