--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -8,13 +8,19 @@
 	<div id='whole_page'>
 		<div id='header'>RailsSpace</div>
 		<div id="nav">
-			<%= link_to_unless_current 'Home',:action => :index %>
-			<%= link_to_unless_current 'About Us',:action => :about %>
-			<%= link_to_unless_current 'Help',:action => :help %>
+			<%= nav_link 'Home' %>
+			<%= nav_link 'About Us',"site","about" %>
+			<%= nav_link 'Help',"site","help" %>
+			<%= nav_link 'Register',"user","register" %>
 		</div>
 		<div id="content">
+			<% if flash[:notice] -%>
+				<div id="notice"><%= flash[:notice] %></div>
+			<% end -%>
 			<%= yield %>
 		</div>
+		
+		<%= debug(params) if ENV["RAILS_ENV"] == "development" %>
 	</div>
 
 	
