--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -2,12 +2,28 @@
 <%= form_for :user do |form| %>  <!-- :user 产生input输入框user[screen_name] -->
 	<fieldset>
 		<legend>Enter You Details</legend>
-		<label for="screen_name">Screen name:</label>
-		<%= form.text_field :screen_name %><br/>
-		<label for="email">Email:</label>
-		<%= form.text_field :email %><br/>
-		<label for="password">Password:</label>
-		<%= form.text_field :password %><br/>
-		<%= submit_tag "Register!",:class => "submit" %>
+		<dir id="error_msg">
+			<%=  error_message_for @user %>
+		</dir>
+		<div class="form_row">
+			<label for="screen_name">Screen name:</label>
+			<%= form.text_field :screen_name ,:size => 20, :maxlength => 40 %>
+		</div>
+		
+		<div class="form_row">
+			<label for="email">Email:</label>
+			<%= form.text_field :email,:size => 30,:maxlength => 50 %>
+		</div>
+		
+		<div class="form_row">
+			<label for="password">Password:</label>
+			<%= form.text_field :password,:size => 10,:maxlength => 40 %>
+		</div>
+		
+		<div class="form_row">
+			<%= submit_tag "Register!",:class => "submit" %>
+		</div>
 	</fieldset>
 <% end %>
+
+
