--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -85,8 +85,11 @@ fieldset {
   margin-right: 0.2em;
   display: block;}
   
+  .remember_me {
+    margin-left: 13.5em;}
+    
   .submit {
-  margin-left: 15em;}
+  margin-left: 13.5em;}
 }
 
 
