--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -12,7 +12,9 @@
 			<span style="float:right">
 				<% if logged_in? %>
 					<%= nav_link "Hub","site","index" %> |
-					<%= nav_link "Logout","user" %>
+					<%= nav_link "Logout","user" %> |
+					<% #= session[:user_id] 
+					%>
 				<% else %>
 					<%= nav_link "Register","user" %> |
 					<%= nav_link "Login","user" %>
