--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -11,7 +11,7 @@
 		<div id="nav">
 			<span style="float:right">
 				<% if logged_in? %>
-					<%= nav_link "Hub","site","index" %> |
+					<%= nav_link "Hub","user","index" %> |
 					<%= nav_link "Logout","user" %> |
 					<% #= session[:user_id] 
 					%>
