--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,2 +1,6 @@
-<h1>User#index</h1>
-<p>Find me in app/views/user/index.html.erb</p>
+<h1>你的基本信息</h1>
+<ul>
+	<li>用户名：<%=@user.screen_name%></li>
+	<li>邮箱：<%=@user.email%></li>
+	<li>密码：<%="*******"%></li>
+</ul>
